--- a/config/database.yml
+++ b/config/database.yml
@@ -5,10 +5,9 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: postgresql
+  adapter: mysql
   pool: 5
-  encoding: unicode
-
+ 
 development:
   <<: *default
   database: stock
@@ -17,10 +16,10 @@ development:
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user that initialized the database.
-  username: stock
+  username: root
 
   # The password associated with the postgres role (username).
-  password: mackmack
+  password: tanda
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -29,7 +28,7 @@ development:
 
   # The TCP port the server listens on. Defaults to 5432.
   # If your server runs on a different port number, change accordingly.
-  port: 5432
+  port: 3306
 
   # Schema search path. The server defaults to $user,public
   schema_search_path: myapp,sharedapp,public
